--- a/EvalReact/src/css/style.css
+++ b/EvalReact/src/css/style.css
@@ -189,7 +189,7 @@
   }
   
   .search-container {
-    background: url("./../img/thor.jpg");
+    background: url("../assets/thor.jpg");
     height: 300px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -404,7 +404,7 @@
   
   .focus-container .banner {
     background-repeat: no-repeat;
-    background-image: url("./../img/bg.png");
+    background-image: url("../assets/bg.png");
     padding: 40px 0px;
     width: 100%;
     display: -webkit-box;
